# redhat-menus

./: Makefile  README.md  redhat-menus-fix-make-pot.patch  redhat-menus.spec
src/: ChangeLog  Makefile.in  README  aclocal.m4  configure  configure.in
src/desktop-files/: Makefile.am  Makefile.in  gnome-accessibility.desktop.in  gnome-gdmsetup.desktop.in  gnome-pilot.desktop.in  gthumb.desktop.in  openoffice-printeradmin.desktop.in  openoffice-setup.desktop.in  redhat-audio-player.desktop.in  redhat-diagrams.desktop.in  redhat-drawing.desktop.in  redhat-email.desktop.in  redhat-evolution-calendar.desktop.in  redhat-evolution-contacts.desktop.in  redhat-evolution-mail.desktop.in  redhat-evolution-tasks.desktop.in  redhat-math.desktop.in  redhat-presentations.desktop.in  redhat-print.desktop.in  redhat-spreadsheet.desktop.in  redhat-web.desktop.in  redhat-word-processor.desktop.in
src/menus/: Makefile.in
src/po/: ChangeLog  POTFILES.in  af.po  am.po  ar.po  as.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  ilo.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  ku.po  lo.po  lt.po  (+33 more)
